--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <div id="timer"></div> 
         
         <div class="gallery">
-            <img src="imagens/noaniversariodomeuamor1.png" alt="Foto do casal" class="clickable">
-            <img src="imagens/agentemaluco.jpg" alt="Foto do casal" class="clickable">
-            <img src="imagens/nomeuaniversario.jpg" alt="Foto do casal" class="clickable">
+            <img src="imagens/noaniversariodomeuamor1.png" alt="Nossa foto" class="clickable">
+            <img src="imagens/agentemaluco.jpg" alt="Nossa foto" class="clickable">
+            <img src="imagens/nomeuaniversario.jpg" alt="Nossa foto" class="clickable">
         </div>
     </div>
 
