atualização do html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Você é o amor da minha vida!!💕</h1>
         
-        <p>Estamos juntos desde: <strong>10 de junho de 2022</strong></p> 
+        <p>Estamos juntos desde: <strong>26 de maio de 2024</strong></p> 
         
         <p>Já estamos juntos há:</p>
         <div id="timer"></div> 
